Changes with Apache 1.3.13

  *) Prevent the source code for CGIs from being revealed when using
     mod_vhost_alias and the CGI directory is under the document root
     and a user makes a request like http://www.example.com//cgi-bin/cgi
     as reported in <news:960999105.344321@ernani.logica.co.uk>
     [Tony Finch]

  *) Under Win32, The console input mode is fixed to ignore mouse events 
     and always listen for a Ctrl+C interrupt, even if the console window
     defaults to another mode. [William Rowe]

  *) All Win32 services will now perform a graceful restart when given
     the -n servicename -k restart signal.  No equivilant control exists
     in the service control panel applet or through the NET command.
     There is no useful acknowledgement on Windows 95/98, however.
     [William Rowe]

  *) Significant overhaul of the Win32 port documentation contained in
     the README-WIN.TXT, as well as the htdocs/manual pages windows.html,
     win_compiling.html, and the new win_service.html.
     [Andrew Braund <abraund@dingoblue.net.au>, William Rowe]

  *) Add 'services' for Windows 95 and 98, including install/uninstall
     options.  The Apache server therefore can start when the OS loads,
     and will not stop between logoffs.  This implementation remains 
     -HIGHLY EXPERIMENTAL-.  Additional changes provide for clean shutdown 
     of Win95/98 when Apache is running as a 'service' or a console.  
     [William Rowe, Jan Just Keijser <KEIJSERJJ@logica.com>]

  *) USE_PTHREAD_SERIALIZED_ACCEPT on AIX 4.3 and above. This change
     provides a substantial performance improvement on multi-CPU
     machines serving large numbers of concurrent clients.  
     [Victor J. Orlikowski <vjo@raleigh.ibm.com>]

  *) Brought httpd.conf-dist-win into sync with httpd.conf-dist, and added
     explicit documentation of many Win32 specific features. [William Rowe]

  *) Convert Win32 build files (.dsp) to MSVC 6.0 format, and add perl