@@ -1,5 +1,15 @@
 Changes with Apache 1.3.13
 
+  *) Export from Win32 the ap_start_shutdown and ap_start_restart symbols 
+     for modules and executables dynamically linked to the core.
+     [William Rowe; Jim Patterson <jim-patterson@ncf.ca>]
+
+  *) Correct the problem where the only local host name that the IP stack
+     can discover are 'undotted' private names.  If no fully qualified
+     domain name can be identified, the default ServerName will be set to
+     the machine's IP address string. A warning is always provided if the
+     ServerName not specified, but assumed.  [William Rowe]
+
   *) Prevent the source code for CGIs from being revealed when using
      mod_vhost_alias and the CGI directory is under the document root
      and a user makes a request like http://www.example.com//cgi-bin/cgi
